fix(daemon): drain am start output and bound goHome() with a timeout
Runtime.exec + waitFor() with no stream draining could wedge this
daemon permanently: if `am start` ever wrote enough output to fill
the OS pipe buffer (~64 KB) with nobody reading it, the child would
block writing and waitFor() would never return, silently disabling
the gesture until reboot. goHome() now uses ProcessBuilder with
redirectErrorStream, drains the merged output stream before waiting,
and bounds the wait with waitFor(5, SECONDS), destroying the process
on timeout. COMMAND is unchanged — still HOME only, no force-stop.

Found in code review of Task 11.